# pyosmptparser

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.pbf  test_pyosmptparser.py  tox.ini
src/: lib.rs
