[package]
name = "pyosmptparser"
version = "2.2.0"
authors = ["Julian Perelli <jperelli@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
readme = "README.md"

[lib]
name = "pyosmptparser"
crate-type = ["cdylib"]

[dependencies]
# osmptparser = { path = "../osmptparser" }
# osmptparser = { git = "https://github.com/cualbondi/osmptparser", rev = "775bb442303" }
osmptparser = "2.2.0"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
num_cpus = "1.16.0"
